--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vei-loader",
-  "version": "0.0.10",
+  "version": "0.0.12",
   "description": "vei-loader",
   "main": "index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-core": "^6.25.0",
+    "common-dir": "^1.0.1",
     "esutils": "^2.0.2",
     "lodash.kebabcase": "^4.1.1",
     "vei-vdom": "0.0.11"
